fix(progressbar): Smooth animation on sudden progress jumps
Increase the animation duration to make transitions smoother when progress changes abruptly.

--- a/src/tokens/_flexy-comp-progressbar.scss
+++ b/src/tokens/_flexy-comp-progressbar.scss
@@ -10,7 +10,7 @@ $_flexy-comp-progressbar: (
   track-inactive-color: $flexy-sys-color-primary,
   track-inactive-opacity: 0.2,
   track-active-color: $flexy-sys-color-primary,
-  jump-animation-duration: 150ms,
+  jump-animation-duration: 250ms,
   indeterminate-animation-duration: 1500ms,
 );
 
